--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,7 @@
 ---
 layout: main
 title: "Projects"
+permalink: /aboutme/
 ---
 <h1 class="page-section-header">Let's talk about a few projects</h1>
 
