--- a/articles.html
+++ b/articles.html
@@ -4,10 +4,10 @@ title: "Articles"
 permalink: /articles/
 ---
 
-<h1>Projects</h1>
+<h1>Articles-Coming soon...</h1>
 
 <!-- Debug Output -->
-
+<!-- 
 {% assign projects_posts = site.posts | where: "categories", "projects" %}
 
 {% if projects_posts %}
@@ -24,6 +24,6 @@ permalink: /articles/
   {% endfor %}
 {% else %}
   <p>No projects found.</p>
-{% endif %}
+{% endif %} -->
 
 {% include pagination.html %}
