--- a/projects.html
+++ b/projects.html
@@ -4,10 +4,10 @@ title: "Projects"
 permalink: /projects/
 ---
 
-<h1>Projects</h1>
+<h1>Projects-Coming soon...</h1>
 
 <!-- Debug Output -->
-
+<!-- 
 {% assign projects_posts = site.posts | where: "categories", "projects" %}
 
 {% if projects_posts %}
@@ -24,6 +24,6 @@ permalink: /projects/
   {% endfor %}
 {% else %}
   <p>No projects found.</p>
-{% endif %}
+{% endif %} -->
 
 {% include pagination.html %}
